deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
        name: recon-demo
        labels:
                owner: recon
                app.kubernetes.io/name: recon-demo

spec:
        replicas: 1
        selector:
                matchLabels:
                        app.kubernetes.io/name: recon-demo
        template:
                metadata:
                        labels:
                                app.kubernetes.io/name: recon-demo
                spec:
                        containers:
                                - name: test
                                  image: ballabhs/hello
                                  ports:
                                    - containerPort: 8082
