service.yaml
apiVersion: v1
kind: Service
metadata:
        name: recon-demo
spec:
        selector:
                app.kubernetes.io/name: recon-demo
        ports:
                - protocol: TCP
                  port: 80
                  targetPort: 8082
                  name: http
